--- a/src/vanillajs/app.css
+++ b/src/vanillajs/app.css
@@ -8,10 +8,6 @@
 :root {
 	--base-font__size: 14px;
 }
-/* stylelint-disable-next-line selector-max-type */
-body {
-	box-sizing: border-box;
-}
 
 /** ================================================================================================
  *  App layer.
